--- a/Geekbrains/mainapp/templates/mainapp/contacts.html
+++ b/Geekbrains/mainapp/templates/mainapp/contacts.html
@@ -1,3 +1,20 @@
-{% extends "mainapp/index.html" %}
+{% extends 'mainapp/base.html' %}
+{% load static %}
+
+{% block css %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/clock.css' %}">
+{% endblock %}
 {% block title %}Контакты{% endblock %}
 {% block name %}Контакты{% endblock %}
+
+{% block content %}
+    {% for item in form %}
+        <h3>{{item}} </h3>
+    {% endfor %}
+    <br>
+    <h2>include ares 2 clock</h2>
+    {% include 'mainapp/includes/inc_area2.html' %}
+{% endblock %}
+{% block js %}
+    {% include 'mainapp/includes/inc_js.html' %}
+{% endblock %}
