--- a/Geekbrains/mainapp/templates/mainapp/products.html
+++ b/Geekbrains/mainapp/templates/mainapp/products.html
@@ -1,3 +1,4 @@
-{% extends "mainapp/index.html" %}
+{% extends 'mainapp/base.html' %}
 {% block title %}Продукты{% endblock %}
 {% block name %}Продукты{% endblock %}
+{% block content %}3{% endblock %}
